fix top link spacing for ie and safari

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -85,7 +85,9 @@ li {
 
         .links {
           display: flex;
-          justify-content: space-evenly;
+
+          justify-content: space-between;
+          
           font-size: 2.618rem;
           padding: 0.618rem 0;
           margin-bottom: 1.618rem;
